@@ -1,3 +1,5 @@
+*portage-3.0.13
+::gentoo			update copyright&deps
 *portage-3.0.12
 ::gentoo			remove unnecessary fix
 *portage-3.0.10-r1
